--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack:server": "webpack -p --config webpack.server.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "express": "^4.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -21,9 +22,10 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "webpack": "^3.0.0",
     "webpack-node-externals": "^1.6.0"
   }
